[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttop"
version = "0.1.0"
description = "Training Top - A curses-based monitor for ML training progress"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Valentyn Cihala"}
]
keywords = ["training", "monitor", "machine-learning", "pytorch", "curses"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "psutil>=5.9.0",
    "portalocker>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ttop = "ttop.main:main"

[project.urls]
Homepage = "https://github.com/valentyncihala/ttop"
Repository = "https://github.com/valentyncihala/ttop"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ttop = ["py.typed"]